Service/force-app/main/default/objects/Sensor_Event__c/fields/Modulus_Difference_Vectors__c.field-meta.xml
<CustomField>
    <fullName>Modulus_Difference_Vectors__c</fullName>
    <formula>sqrt(x__c*x__c + y__c*y__c + z__c*z__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modulus Difference Vectors</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>