Service/force-app/main/default/objects/Sensor_Event__c/fields/y__c.field-meta.xml
<CustomField>
    <fullName>y__c</fullName>
    <label>y</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>