Service/force-app/main/default/objects/Sensor_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Previous_Event__c</columns>
    <columns>Sensor__c</columns>
    <columns>Modulus_Difference_Vectors__c</columns>
    <columns>x__c</columns>
    <columns>y__c</columns>
    <columns>z__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>